# hvps

./: .gitignore
Code/C++/HVPSController/main/: CMakeLists.txt  HVPSConfig.hpp  HVPSController.cpp  HighSpeedController.cpp  HighSpeedController.hpp
Code/C++/HVPSController/main/ADC/: MonitorVoltageThresholdHandle.cpp  MonitorVoltageThresholdHandle.hpp  ReverseVoltageToRawLookup.hpp
Code/C++/HVPSController/main/Broadcasting/: LiveDataBroadcaster.cpp  LiveDataBroadcaster.hpp
Code/C++/HVPSController/main/Components/: BoardLED.cpp  BoardLED.hpp
Code/C++/HVPSController/main/ControllerCore/: HighSpeedCore.cpp  HighSpeedCore.hpp  LiveDataCache.cpp  LiveDataCache.hpp
Code/C++/HVPSController/main/Core/: CancellationToken.cpp  CancellationToken.hpp  CleanupBucket.cpp  DoubleAndTime.hpp  Event.hpp  Latch.hpp  Macros.hpp  RefCounted.hpp  SimpleResult.hpp  SingletonBase.hpp  Timer.cpp  TimerSimple.hpp
Code/C++/HVPSController/main/Enums/: RunningMode.hpp  SystemState.hpp  VillardCascadingState.hpp
Code/C++/HVPSController/main/Graphics/: ScrollSetup.hpp
Code/C++/HVPSController/main/Guids/: BluetoothUUIDHelper.cpp  BluetoothUUIDHelper.hpp
Code/C++/HVPSController/main/IO/: ADCChannels.cpp  ADCChannels.hpp  AnalogueInputs.cpp  AnalogueInputs.hpp  FirstStageVoltageFeedbackFiberOpticDuplexChannel.cpp  FirstStageVoltageFeedbackFiberOpticDuplexChannel.hpp  Inputs.cpp  Inputs.hpp  OutputVoltageFeedbackFiberOpticDuplexChannel.cpp  OutputVoltageFeedbackFiberOpticDuplexChannel.hpp  Outputs.cpp  Outputs.hpp  OutputsLifetimeFlags.hpp  PinDefinitions.cpp  PinDefinitions.hpp
Code/C++/HVPSController/main/JSON/: CJsonRAII.cpp  CJsonRAII.hpp  JHelper.cpp  JHelper.hpp
Code/C++/HVPSController/main/Messaging/: MessageConstants.hpp
Code/C++/HVPSController/main/Ports/: Port_ControllingMachine.cpp  Port_ControllingMachine.hpp  Port_FirstStageVoltageFeedback.cpp  Port_FirstStageVoltageFeedback.hpp  Port_OutputVoltageFeedback.cpp  Port_OutputVoltageFeedback.hpp  Port_VoltageFeedbackBase.cpp  Port_VoltageFeedbackBase.hpp
Code/C++/HVPSController/main/Storage/: Flash.cpp  Flash.hpp
Code/C++/HVPSController/main/System/: Aborter.hpp  Aborter.tpp  PerformanceProfiler.cpp  StayTheFuckAwake.cpp  WatchdogFeeder.cpp
Code/C++/HVPSController/main/Ticketing/: TicketSource.cpp  TicketSource.hpp  TicketedSender.cpp  TicketedSender.hpp
Code/C++/HVPSController/main/Timing/: Delay.cpp  Delay.hpp  TimeHelper.cpp  TimeHelper.hpp
Code/C++/VoltageFeedbackModule/main/: CMakeLists.txt  PriorityLooper.cpp  PriorityLooper.hpp  State.cpp  State.hpp  VoltageFeedbackModule.cpp
Code/C++/VoltageFeedbackModule/main/ADC/: MonitorVoltageThresholdHandle.cpp  MonitorVoltageThresholdHandle.hpp  ReverseVoltageToRawLookup.cpp  ReverseVoltageToRawLookup_Entry.hpp
Code/C++/VoltageFeedbackModule/main/Core/: CleanupBucket.hpp  (+9 more)
(+849 files in other folders)
