idf_component_register(SRCS "HVPSController.cpp"
"Communication/Bluetooth/Bluetooth_BR_EDR.cpp" 
"Communication/I2C/I2C.cpp" 
"Components/TemperatureSensors/LM75A.cpp" 
"Components/Accelerometers/MPU6050.cpp" 
"Core/CancellationToken.cpp"
"Core/CleanupBucket.cpp"
"Core/Latch.cpp"
"Core/RefCounted.cpp"
"Core/Timer.cpp"
"Core/TimerSimple.cpp"
"Generated/Messages/ConsoleMessage.cpp"
"Guids/BluetoothUUIDHelper.cpp"
"HighSpeedController.cpp"
"IO/ADCChannels.cpp"
"IO/AnalogueInputs.cpp"
"IO/FirstStageVoltageFeedbackFiberOpticDuplexChannel.cpp"
"IO/Inputs.cpp"
"IO/Outputs.cpp"
"IO/OutputVoltageFeedbackFiberOpticDuplexChannel.cpp"
"IO/PinDefinitions.cpp"
"JSON/JHelper.cpp"
"JSON/CJsonRAII.cpp"
"Logging/Log.cpp" 
"Ports/Port_ControllingMachine.cpp"
"Ports/Port_FirstStageVoltageFeedback.cpp"
"Ports/Port_OutputVoltageFeedback.cpp"
"Ports/Port_VoltageFeedbackBase.cpp"
"Storage/Flash.cpp"
"System/StayTheFuckAwake.cpp"
"System/WatchdogFeeder.cpp"
"Tasks/TaskFactory.cpp"
"Timing/Delay.cpp"
"Timing/TimeHelper.cpp"
"Ticketing/TicketedSender.cpp"
"Ticketing/TicketedSenderHandle.cpp"
"Ticketing/TicketSource.cpp"
PRIV_REQUIRES spi_flash driver bt nvs_flash esp_adc
INCLUDE_DIRS "")