idf_component_register(
    SRCS 
        "VoltageFeedbackModule.cpp"
        "Storage/Flash.cpp"
        "State.cpp" 
        "Communication/FiberOptic/TOSLINKDuplexChannel.cpp"
        "Communication/UART/UARTDuplexChannel.cpp"
        "Logging/Log.cpp"
        "System/WatchdogFeeder.cpp"
        "System/StayTheFuckAwake.cpp"
        "System/PerformanceProfiler.cpp"
        "Tasks/TaskFactory.cpp"
        "Timing/Delay.cpp"
        "Timing/TimeHelper.cpp"
        "Core/TimerSimple.cpp"
        "Core/Timer.cpp"
        "Ticketing/TicketSource.cpp"
        "Ticketing/TicketedSender.cpp"
        "Ticketing/TicketedSenderHandle.cpp"
        "Core/CancellationToken.cpp"
        "Core/Latch.cpp"
        "Core/RefCounted.cpp"
        "Ports/Port_FiberOpticChannel1.cpp"
        "Generated/Messages/ConsoleMessage.cpp"
        "Generated/Messages/PingMessage.cpp"
		"Generated/Messages/SetVoltageThresholdRequest.cpp"
		"Generated/Messages/SetVoltageThresholdResponse.cpp"
		"Generated/Messages/GetVoltageRequest.cpp"
		"Generated/Messages/GetVoltageResponse.cpp"
        "JSON/JHelper.cpp"
        "JSON/CJsonRAII.cpp"
        "IO/FiberOpticDuplexChannel_1.cpp"
        "IO/AnalogueInputs.cpp"
        "IO/Outputs.cpp"
        "IO/Inputs.cpp"
        "ADC/ReverseVoltageToRawLookup.cpp"
        "PriorityLooper.cpp"
        "ADC/MonitorVoltageThresholdHandle.cpp"
    PRIV_REQUIRES spi_flash driver bt nvs_flash esp_adc
    INCLUDE_DIRS ""
)
